--- a/Final_Project/src/userinterface/LabManagerRole/LabManagerWorkAreaJPanel.form
+++ b/Final_Project/src/userinterface/LabManagerRole/LabManagerWorkAreaJPanel.form
@@ -73,6 +73,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Manage Work Queue"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnWorkQueueActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
